# routes/index.js
@@ -6,6 +6,7 @@ router.use('/', require('./swagger'));
 router.use('/products', require('./products'));
 router.use('/users', require('./users'));
 router.use('/orders', require('./orders'));
+router.use('/reviews', require('./reviews'));
 
 router.get('/login', passport.authenticate('github'), (req, res) => { });
 
